@@ -3106,7 +3106,7 @@ install-data-local:
 	${mkinstalldirs} $(DESTDIR)${prefix}/jre/.systemPrefs
 	${mkinstalldirs} $(DESTDIR)${prefix}/jre/lib
 	${mkinstalldirs} $(DESTDIR)${prefix}/jre/lib/$(INSTALL_ARCH_DIR)
-	${mkinstalldirs} $(DESTDIR)${prefix}/jre/lib/{cmm,ext,images/cursors,management,security}
+	${mkinstalldirs} $(DESTDIR)${prefix}/jre/lib/{cmm,ext,jfr,images/cursors,management,security}
 	${mkinstalldirs} $(DESTDIR)$(mandir)/{man1,ja_JP.UTF-8/man1}
 	${mkinstalldirs} $(DESTDIR)${prefix}/demo
 	${mkinstalldirs} $(DESTDIR)${prefix}/sample
@@ -3137,6 +3137,9 @@ install-data-local:
 	  $(INSTALL_DATA) $${files} $(DESTDIR)${prefix}/jre/lib/cmm; \
 	done
 	$(INSTALL_DATA) $(BUILD_SDK_DIR)/jre/lib/ext/meta-index $(DESTDIR)${prefix}/jre/lib/ext
+	for files in $(BUILD_SDK_DIR)/jre/lib/jfr/*.jfc; do \
+	  $(INSTALL_DATA) $${files} $(DESTDIR)${prefix}/jre/lib/jfr; \
+	done
 	for files in $(BUILD_SDK_DIR)/jre/lib/images/cursors/*.gif; do \
 	  $(INSTALL_DATA) $${files} $(DESTDIR)${prefix}/jre/lib/images/cursors; \
 	done
@@ -3294,6 +3297,9 @@ uninstall-local:
 	  rm -vf $(DESTDIR)/${prefix}/jre/lib/cmm/$$(basename $${files}); \
 	done
 	rm -vf $(DESTDIR)${prefix}/jre/lib/ext/meta-index
+	for files in $(BUILD_SDK_DIR)/jre/lib/jfr/*.jfc; do \
+	  rm -vf $(DESTDIR)/${prefix}/jre/lib/jfr/$$(basename $${files}); \
+	done
 	for files in $(BUILD_SDK_DIR)/jre/lib/images/cursors/*.gif; do \
 	  rm -vf $(DESTDIR)${prefix}/jre/lib/images/cursors/$$(basename $${files}); \
 	done
@@ -3367,7 +3373,7 @@ endif
 	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/$(INSTALL_ARCH_DIR)/jli
 	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/$(INSTALL_ARCH_DIR)
 	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/security/policy
-	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/{cmm,ext,images/cursors,management,security}
+	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/{cmm,ext,jfr,images/cursors,management,security}
 	$(RMDIR) $(DESTDIR)${prefix}/jre/lib/images
 	$(RMDIR) $(DESTDIR)${prefix}/jre/bin $(DESTDIR)${prefix}/jre/lib
 	$(RMDIR) $(DESTDIR)${prefix}/jre/.systemPrefs
