@@ -1,5 +1,15 @@
 2020-10-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
+	PR3808: IcedTea does not install the JFR *.jfc files
+	* Makefile.am:
+	(install-data-local): Create jre/lib/jfr directory
+	and copy over *.jfc files.
+	(uninstall-local): Remove JFR *.jfc files and
+	jre/lib/jfr directory on uninstall.
+	* NEWS: Updated.
+
+2020-10-26  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
 	Bump aarch32 to jdk8u272-ga-aarch32-20201026.
 	* patches/hotspot/aarch32/8251120-pr3793.patch:
 	Removed as applied upstream.
